turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:5: error: not found: value x
    makePattern(x)
                ^